--- a/app/js/app/styles/styles.css
+++ b/app/js/app/styles/styles.css
@@ -1,15 +1,24 @@
 .occ-react-component {
-  background: black;
+  background: grey;
   color: white;
   text-align: center;
   padding: 50px;
-
-  .logo {
-    background: url("../images/logo.png") no-repeat;
-    width: image-width('~logo.png');
-    height: image-height('~logo.png');
-  }
-
 }
+
+.example {
+  margin: 10px 0;
+}
+
+.logo {
+  width: 200px;
+}
+
+.oracle-logo {
+  display: inline-block;
+  background: url("../images/oracle-learning-partner.png") no-repeat;
+  width: image-width('~oracle-learning-partner.png');
+  height: image-height('~oracle-learning-partner.png');
+}
+
 
 
